[tool.poetry]
name = "urlprompt"
version = "0.1.0"
description = "External prompts for Splunk Phantom"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2"
djangorestframework = "^3.12.4"
jsonschema = "^3.2.0"
django-fsm = "^2.7.1"
gunicorn = "^20.1.0"
whitenoise = "^5.2.0"
drf-yasg = "^1.20.0"
django-environ = "^0.4.5"

[tool.poetry.dev-dependencies]
mkdocs = "^1.1.2"
mkdocs-material = "^7.1.3"
mkdocs-git-revision-date-plugin = "^0.3.1"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
