[tool.poetry]
name = "urlprompt"
version = "0.1.0"
description = "External prompts for Splunk Phantom"
authors = ["Daniel Federschmidt <dfederschmidt@splunk.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2"
djangorestframework = "^3.12.4"
jsonschema = "^3.2.0"
django-fsm = "^2.7.1"
gunicorn = "^20.1.0"
whitenoise = "^5.2.0"
drf-yasg = "^1.20.0"
django-environ = "^0.4.5"
pytest = "^6.2.3"
django-structlog = "^2.1.0"
django-simple-history = "^3.0.0"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]
mkdocs = "^1.1.2"
mkdocs-material = "^7.1.3"
mkdocs-git-revision-date-plugin = "^0.3.1"
pytest-django = "^4.2.0"
pytest = "^6.2.3"
bump2version = "^1.0.1"
flake8 = "^3.9.2"
black = {version = "^21.5b2", allow-prereleases = true}
pytest-cov = "^2.12.0"
pip-licenses = "^3.4.0"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
